<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:padding="10dp"
        android:text="@string/addLandmarkDialogTitle"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtAddLandmarkNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/addLandmarkDialogLandmark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtAddLandmarkName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtAddLandmarkDescriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/addLandmarkDialogDescription">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtAddLandmarkDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnAddLandmarkCancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/NegativeButton" />

        <Button
            android:id="@+id/btnAddLandmark"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/cityCardAddBtn" />

    </LinearLayout>


</LinearLayout>