<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:padding="10dp"
        android:text="@string/editDescriptionDialogTitle"
        android:textColor="@color/white"
        android:textSize="30dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEditCityNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/editNameLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEditCityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEditCityDescriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/editDescriptionLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEditCityDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/btnAddLandmarkCancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/NegativeButton" />

        <Button
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/btnAddLandmark"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/cityCardEditBtn" />

    </LinearLayout>

</LinearLayout>